--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <img src="beefchilli.jpg" alt="Food Item 1">
                     <h3>Rice with beef chilli</h3>
                     <p>Price: 220/-</p>
-                    <p class="availability available">Available</p>
+                    <p class="availability not-available">Not Available</p>
                 </div>
                 <div class="menu-item">
                     <img src="chickenchilli.jpg" alt="Food Item 2">
