--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-color: #FB4700;
             color: #fff;
             text-align: center;
-            padding: 0.03em 0;
+            padding: 0..9em 0;
             position: fixed;
             top: 0;
             width: 100%;
@@ -153,7 +153,7 @@
                     <img src="beefchilli.jpg" alt="Food Item 1">
                     <h3>Rice with beef chilli</h3>
                     <p>Price: 220/-</p>
-                    <p class="availability not-available">Not Available</p>
+                    <p class="availability available">Available</p>
                 </div>
                 <div class="menu-item">
                     <img src="chickenchilli.jpg" alt="Food Item 2">
